# ja-craft

./: CMakeLists.txt  LICENSE  Makefile  README.md  input.cpp  input.h  main.cpp  stb_image.h
ext/: stb_image.h
ext/glad/include/glad/: glad.h
gfx/: mesh.cpp  mesh.h  program.h  shader.cpp  shader.h  texture_atlas.cpp  texture_atlas.h
glad/src/: glad.c
inc/glfw/: window.h
inc/graphics/: buffer.h  mesh.h  program.h  shader.h  texture.h  texture_atlas.h  vertex.h  vertex_array.h  viewing_frustum.h
inc/utility/: angle.h  handle.h  scope_guard.h
inc/world/: block.h  chunk.h  cube.h  pose.h
physics/: ray.cpp  ray.h  swept.cpp  swept.h
resources/shaders/: simple.frag  simple.vert
resources/textures/: atlas.aseprite
src/: main.cpp
src/gfx/: program.cpp  shader.h  texture_atlas.cpp  texture_atlas.h
src/glfw/: CMakeLists.txt  window.cpp
src/graphics/: CMakeLists.txt  buffer.cpp  mesh.cpp  program.cpp  shader.cpp  texture.cpp  texture_atlas.cpp  vertex_array.cpp  viewing_frustum.cpp
src/physics/: aabb.cpp  aabb.h  ray.cpp  swept.cpp  swept.h
src/util/: indices_view.h  optional_ref.h
src/utility/: CMakeLists.txt  angle.cpp
src/world/: CMakeLists.txt  block.cpp  block.h  block_info.h  camera.cpp  camera.h  chunk.cpp  chunk.h  cube.cpp  cube.h  cube_mesh.h  default_terrain_generator.cpp  default_terrain_generator.h  file.h  generator.cpp  generator.h  md_array_view.cpp  md_array_view.h  player.cpp  player.h  pose.cpp  terrain.cpp  terrain.h
util/: indices.cpp  indices.h  indices_view.h  non_copyable.h  optional_ref.h
world/: aabb.cpp  aabb.h  camera.cpp  camera.h  chunk.cpp  chunk.h  cube.h  cube_mesh.h  default_terrain_generator.cpp  default_terrain_generator.h  flat_terrain_generator.cpp  flat_terrain_generator.h  generator.cpp  generator.h  mesh.cpp  mesh.h  player.h  ray.cpp  ray.h  swept.h  terrain.cpp  terrain.h  terrain_generator.h
